# frag.jetzt

./:   .angular-cli.json  .angulardoc.json  .browserslistrc  .dockerignore  .env.test  .eslintcache  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .hintrc  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Definition of Done checklist for User Story.md  DoD.md  Dockerfile  LICENSE.md  README.md  THEME-README.md  angular.json  authors.md  build.gradle  capacitor.config.ts  ci_staging_backend.export  commit.txt  copy-icons.sh  cypress.config.ts  cypress.json  development-docker.md  development.md  docker-compose.yml  eslint.config.mjs  execute-update.sh  i18nUpdater.js  karma.conf.js  logs.txt  ngsw-config.json  package-lock.json  (+15 more)
.docker/: Dockerfile  Dockerfile.kaniko  default.conf  docker-compose.override.dev.yml  entrypoint.sh  nginx.conf  setup.sh
.sonarlint/: connectedMode.json
analysis/: Dockerfile  docker-compose.yml  entrypoint.sh  init.sh
cypress/: tsconfig.json
docs/: README.md  app_compliance.md  comments_diagrams.mdj  data flow.md  domain_model.uxf  roadmap.md  use_case_diagram.uxf
e2e/: .eslintrc.json  app.e2e-spec.ts
install/: manage-dependency.mjs  post-install.js  run-with-production.mjs  run-with-staging.mjs
src/: browser.ts  index.html  indexeddb.ts  main.ts  manifest.webmanifest  manifest2.webmanifest  polyfills.ts  (+8 more)
webassembly/frag-jetzt-wasm/: Cargo.toml  index.html
webassembly/frag-jetzt-wasm/src/: lib.rs  quadtree.rs  wordCloudPlacing.rs
webassembly/frag-jetzt-wasm/src/wordCloudPlacing/: placingFourSides.rs  quadtree.rs
(+3035 files in other folders)
